--- a/templates/products/add_product.html
+++ b/templates/products/add_product.html
@@ -16,15 +16,15 @@
                         {% csrf_token %}
                         <label class="pull-right"><strong>پروڈکٹ کا نام</strong></label>
                         <span class="product-name-error" style="color:red; display:none">اس کو پر کرنا ضروری ہے</span>
-                        <input type="text" class="form-control product_name pull-right" style="text-align: right;" name="name" placeholder="پروڈکٹ کا نام"><br>
+                        <input type="text" class="form-control pull-right product_name" style="text-align: right;" name="name" placeholder="پروڈکٹ کا نام"><br>
                         <label class="pull-right"><strong>برانڈ کا نام</strong></label>
                         <span class="brand-name-error" style="color:red; display:none">اس کو پر کرنا ضروری ہے</span>
-                        <input type="text" class="form-control brand_name" style="text-align: right;" name="brand_name" placeholder="برانڈ کا نام"><br>
+                        <input type="text" class="form-control pull-right brand_name" style="text-align: right;" name="brand_name" placeholder="برانڈ کا نام"><br>
                         <label class="pull-right"><strong>مصنوعات کی قسم</strong></label>
                         <span class="brand-name-error" style="color:red; display:none">اس کو پر کرنا ضروری ہے</span>
-                        <input type="text" class="form-control product_category" style="text-align: right;" name="product_category" placeholder="مصنوعات کی قسم"><br>
+                        <input type="text" class="form-control pull-right product_category" style="text-align: right;" name="product_category" placeholder="مصنوعات کی قسم"><br>
                         <label class="pull-right"><strong>یونٹ کی قسم</strong></label>
-                        <input type="text" class="form-control unit_type" style="text-align: right;" name="unit_type" placeholder="یونٹ کی قسم" list="unit-list">
+                        <input type="text" class="form-control pull-right unit_type" style="text-align: right;" name="unit_type" placeholder="یونٹ کی قسم" list="unit-list">
                         <datalist id="unit-list">
                             <option value="کلو گرام"></option>
                             <option value="گرام"></option>
