--- a/templates/products/item_details.html
+++ b/templates/products/item_details.html
@@ -9,10 +9,10 @@
             <div class="content-panel table-responsive">
                 <table class="table table-striped table-bordered table-advance table-hover item-table">
                     <h2 class="text-center">مصنوعات کی اشیاء کی فہرست</h2>
-                    <div class="input-group custom-search-form col-md-4 pull-right" style="right: 30px">
+                    <div class="input-group custom-search-form col-md-4 pull-right" style="right: 0px; margin-bottom: 10px;">
                         <input type="text" class="form-control search-item" style="text-align: right;" placeholder="تلاش کریں">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" style="right:465px;"  type="button">
+                            <button class="btn btn-default pull-right" style="right: 430px;"  type="button">
                                 <i class="fa fa-search"></i>
                             </button>
                         </span>
