--- a/templates/supplier/payment.html
+++ b/templates/supplier/payment.html
@@ -16,7 +16,7 @@
                         <input type="hidden" class="form-control name text-right" name="supplier" value="{{ supplier.id }}" placeholder="{{ supplier }}" readonly><br>
                         <label class="pull-right" > <strong>ادائیگی کی رقم</strong></label>
                         <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="Payable Amount"><br>
+                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="ادائیگی کی رقم"><br>
                         <label class="pull-right" ><strong>تفصیل نمبر</strong></label>
                         <input type="text" class="form-control mobile text-right" name="description" placeholder="تفصیل"><br>
                         <label class="pull-right" ><strong>تاریخ</strong></label>
