--- a/templates/ledger/payment_ledger.html
+++ b/templates/ledger/payment_ledger.html
@@ -2,6 +2,13 @@
 {% block menu_ledger %}active{% endblock %}
 {% block submenu_customer_ledger %}active{% endblock %}
 {% block content %}
+
+<style>
+    .requ:after {
+    content:" *";
+    color: red;
+  }
+</style>
 <div class="col-md-6">
     <br>
     <a href="{% url 'ledger:customer_ledger_detail' customer_id=customer.id%}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Customer Ledger Details</button></a>
@@ -13,9 +20,9 @@
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
-                         <label><strong>Amount</strong></label>
-                        <span class="amount-error" style="color: red; display: none"> This Feild is Requried</span>
-                        <input type="text" class="form-control amount" name="amount" placeholder="Amount"><br>
+                         <label class="requ"><strong>رقم</strong></label>
+                        <span class="amount-error" style="color: red; display: none">اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control amount" name="amount" placeholder="رقم" required><br>
                         <label><strong>payment Type</strong></label>
                         <input type="text" class="form-control payment_type" name="payment_type" placeholder="Payment Type">
                         <span style="color: #68dff0">For example: UBL Online, HBL Check or Cash etc</span><br><br>
