--- a/templates/ledger/updateLedgers.html
+++ b/templates/ledger/updateLedgers.html
@@ -2,6 +2,14 @@
 {% block submenu_add_new_ledger %}active{% endblock %}
 {% block menu_ledger %}active{% endblock %}
 {% block content %}
+
+
+<style>
+    .required:after {
+    content:" *";
+    color: red;
+  }
+</style>
 <div class="col-md-6">
     <!-- {{ledgers.customer.customer_name}} -->
     <br>
@@ -15,21 +23,23 @@
                     <div class="col-sm-12">
                         {% csrf_token %}
                         <label class="pull-right"><strong>گاہک کا نام</strong></label>
-                        <span class="customer-existing" style="color: red; display: none" >Customer Already Exisit</span>
-                        <span class="customer-error" style="color: red; display: none" >this field is requried</span>
+                        <span class="customer-existing" style="color: red; display: none" >کسٹمر پہلے سے موجود ہے</span>
+                        <span class="customer-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <input type="text" class="form-control customer text-right" name="customer_name" value="{{ledgers.customer.customer_name}}" readonly placeholder=" نام"><br>
                         <label class="pull-right"><strong>کسٹمر فون</strong></label>
-                        <span class="customer-phone-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control customer_phone text-right" name="customer_phone" value="{{ledgers.customer.customer_phone}}" readonly placeholder="فون"><br>
+                        <span class="customer-phone-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control customer_phone text-right" name="customer_phone" value="{{ledgers.customer.customer_phone}}" readonly placeholder="فون">
+                        <span class="pull-right" style="color: #ff0000;">خالی چھوڑیں لیکن صرف 0 نہ ڈالیں یا 0321 جیسے دوسرے ہندسے شامل کریں۔</span><br><br>
+
                         <label class="pull-right"><strong>کسٹمر کی قسم</strong></label>
-                        <span class="customer-type-error" style="color: red; display: none" >this field is requried</span>
+                        <span class="customer-type-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <input type="text" class="form-control customer_type text-right" name="customer_type"  value="{{ledgers.customer.customer_type}}" readonly placeholder="گاہک کی قسم">
                         <span style="color:#00ccff" class="pull-right">مثال کے طور پر: خوردہ فروش، ہول سیل ڈیلر وغیرہ</span><br><br>
-                        <label class="pull-right"><strong>رقم</strong></label>
-                        <span class="amount-error" style="color: red; display: none" >this field is requried</span>
+                        <label class="pull-right required"><strong>رقم</strong></label>
+                        <span class="amount-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <input type="text" class="form-control amount text-right" name="amount" value="{{ledgers.amount}}" placeholder="رقم"><br>
-                        <label class="pull-right"><strong>تفصیل</strong></label>
-                        <span class="description-error" style="color: red; display: none" >this field is requried</span>
+                        <label class="pull-right required"><strong>تفصیل</strong></label>
+                        <span class="description-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <textarea maxlength="500" rows="4" name="description"  class="form-control description text-right"  placeholder ="تفصیل">{{ledgers.description}}</textarea> <br>
                         <input type="hidden" name="ledgers_id" class="text-right" value="{{ ledgers.id }}">
                         <button type="button" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">کھاتا محفوظ کریں۔</button>
