--- a/templates/supplier/add_supplier_statement.html
+++ b/templates/supplier/add_supplier_statement.html
@@ -2,6 +2,13 @@
 {% block submenu_create_supplier %}active{% endblock %}
 {% block menu_supplier %}active{% endblock %}
 {% block content %}
+
+<style>
+    .required:after {
+    content:" *";
+    color: red;
+  }
+</style>
 <div class="col-md-6">
     <br>
     <!-- <a href="#"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Name</button></a> -->
@@ -14,14 +21,14 @@
                     <div class="col-sm-12">
                         {% csrf_token %}
                         <label class="pull-right"><strong>نام</strong></label>
-                        <span class="name-error" style="color: red; display: none" >this field is requried</span>
+                        <span class="name-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <input type="text" class="form-control name text-right"  name="supplier_name" value="{{ supplier.name }}" placeholder="{{ supplier }}" readonly><br>
-                        <label class="pull-right"><strong>فراہم کنندہ کی رقم</strong></label>
-                        <span class="father_name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control father_name text-right" name="supplier_amount" placeholder="کل رقم"><br>
-                        <label class="pull-right"><strong>ادائیگی کی رقم</strong></label>
-                        <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="قابل ادائیگی رقم"><br>
+                        <label class="pull-right required"><strong>فراہم کنندہ کی رقم</strong></label>
+                        <span class="father_name-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control father_name text-right" name="supplier_amount" placeholder="کل رقم" required><br>
+                        <label class="pull-right required"><strong>ادائیگی کی رقم</strong></label>
+                        <span class="mobile-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="قابل ادائیگی رقم" required><br>
                         <label class="pull-right"><strong>تفصیل نمبر</strong></label>
                         <input type="text" class="form-control mobile text-right" name="description" placeholder="تفصیل"><br>
                         <label class="pull-right"><strong>تاریخ</strong></label>
