--- a/templates/supplier/payment.html
+++ b/templates/supplier/payment.html
@@ -2,6 +2,13 @@
 {% block submenu_create_supplier %}active{% endblock %}
 {% block menu_supplier %}active{% endblock %}
 {% block content %}
+
+<style>
+    .required:after {
+    content:" *";
+    color: red;
+  }
+</style>
 <div class="col-md-6">
     <br>
     <br>
@@ -12,11 +19,13 @@
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
-                        <span class="name-error" style="color: red; display: none" >this field is requried</span>
+                        <span class="name-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <input type="hidden" class="form-control name text-right" name="supplier" value="{{ supplier.id }}" placeholder="{{ supplier }}" readonly><br>
-                        <label class="pull-right" > <strong>ادائیگی کی رقم</strong></label>
-                        <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="ادائیگی کی رقم"><br>
+                        <label class="pull-right required"> <strong>ادائیگی کی رقم</strong></label>
+                        <span class="mobile-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="ادائیگی کی رقم" required>
+                        <span class="pull-right" style="color: #ff0000;">خالی نہ چھوڑیں کم از کم 0 ڈالیں۔</span><br><br>
+
                         <label class="pull-right" ><strong>تفصیل نمبر</strong></label>
                         <input type="text" class="form-control mobile text-right" name="description" placeholder="تفصیل"><br>
                         <label class="pull-right" ><strong>تاریخ</strong></label>
