--- a/templates/supplier/update_supplier_statement.html
+++ b/templates/supplier/update_supplier_statement.html
@@ -2,6 +2,14 @@
 {% block submenu_create_supplier %}active{% endblock %}
 {% block menu_supplier %}active{% endblock %}
 {% block content %}
+
+<style>
+    .required:after {
+    content:" *";
+    color: red;
+  }
+</style>
+
 <div class="col-md-6">
     <br>
     <br><br><br>
@@ -12,14 +20,14 @@
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
-                        <span class="name-error" style="color: red; display: none" >this field is requried</span>
+                        <span class="name-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
                         <input type="hidden" class="form-control name text-right" name="supplier" value="{{ object.supplier.id }}" placeholder="{{ object.supplier.id }}" readonly><br>
-                        <label class="pull-right"><strong>فراہم کنندہ کی رقم</strong></label>
-                        <span class="father_name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control father_name text-right" name="supplier_amount" placeholder="{{object.supplier_amount}}" value="{{object.supplier_amount}}"><br>
-                        <label class="pull-right"><strong>ادائیگی کی رقم</strong></label>
-                        <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="{{object.payment_amount}}" value="{{object.payment_amount}}"><br>
+                        <label class="pull-right required"><strong>فراہم کنندہ کی رقم</strong></label>
+                        <span class="father_name-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control father_name text-right" name="supplier_amount" placeholder="{{object.supplier_amount}}" value="{{object.supplier_amount}}" required><br>
+                        <label class="pull-right required"><strong>ادائیگی کی رقم</strong></label>
+                        <span class="mobile-error" style="color: red; display: none" >اس کو پر کرنا ضروری ہے</span>
+                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="{{object.payment_amount}}" value="{{object.payment_amount}}" required><br>
                         <label class="pull-right"><strong>تفصیل نمبر</strong></label>
                         <input type="text" class="form-control mobile text-right" name="description" placeholder="{{object.description}}" value="{{object.description}}"><br>
                         <label class="pull-right"><strong>تاریخ</strong></label>
