--- a/templates/products/stockout_list.html
+++ b/templates/products/stockout_list.html
@@ -12,6 +12,8 @@
             <table class="table table-striped table-advance table-hover item-table table-bordered">
                 <thead>
                 <tr>
+                    <th class="text-center"><i class="fa fa-bullhorn"></i>اعمال</th> 
+
                     <th class="text-center">تاریخ</th> 
                     <th class="text-center">فروخت کی قیمت</th>
                     <th class="text-center">خرید کی قیمت</th>
@@ -21,6 +23,10 @@
                 <tbody class="product-table-body text-center">
                 {% for stockout in object_list %}
                     <tr>
+                        <td>
+                            <a href="/product/deletestockout/?id={{stockout.id}}"><button class="confirm-delete btn btn-danger btn-xs" title="Delete"><i class="fa  fa-trash"></i></button></a>
+
+                        </td>
                         <td>{{ stockout.dated}}</td>
                         <td class="#">{{ stockout.selling_price|floatformat:-2 }}</td>
                         <td class="#">{{ stockout.buying_price|floatformat:-2 }}</td>
@@ -55,6 +61,9 @@ $('#add-product').on('click', function() {
        $this.button('reset');
    }, 5000);
 });
+$(document).on('click', '.confirm-delete', function(){
+    return confirm('Are you sure you want to delete this?');
+})
 
     </script>
 {% endblock %}
