--- a/templates/supplier/update_supplier_statement.html
+++ b/templates/supplier/update_supplier_statement.html
@@ -14,7 +14,7 @@
     <br>
     <br><br><br>
     <div class="content-panel">
-        <h3 class="text-center"> اپ ڈیٹ بیان |{{supplier.name}}</h3>
+        <h3 class="text-center"> {{supplier.name}} | اپ ڈیٹ بیان</h3>
         <div class="panel-body">
             <form class="form-horizontal add-ledger-form" action="{% url 'supplier:update_supplier_statement' pk=object.id %}" method="post" autocomplete="off">
                 <div class="form-group">
