--- a/templates/ledger/customer_ledger_list.html
+++ b/templates/ledger/customer_ledger_list.html
@@ -45,7 +45,7 @@
                     <th class="text-center"><i class=" fa fa-edit"></i>شخص کی قسم</th>
                     <th class="text-center"><i class=" fa fa-bookmark"></i>فون</th>
                     <th class="text-center"><i class="fa fa-bullhorn"></i>نام</th>
-
+                    <th class="text-center"><i class="fa fa-bullhorn"></i>سیریل نمبر</th>
                 </tr>
             </thead>
             <tbody class="ledger-table-body text-center">
@@ -72,6 +72,7 @@
                     <td>{{ customer_ledger.customer_phone }}</td>
 
                     <td><a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}">{{customer_ledger.customer_name}}</a></td>
+                    <td>{{ forloop.counter }}</td>
                 </tr>
                 {% endfor %}
                 {% else %}
