--- a/templates/products/stockout_list.html
+++ b/templates/products/stockout_list.html
@@ -3,9 +3,10 @@
 {% block content %}
     <div class="col-md-12">
         <br>
+        <a href="{% url 'product:stock_items_list' %}"><button type="button" id="add-product" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">مصنوعات کی فہرست</button></a>
+
         <a href="{% url 'product:stock_out_items' product_id=product.id %}"><button type="button" id="stock-out" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">زخیرہ کا نکالنا</button></a>   
         
-        <a href="{% url 'product:stock_items_list' %}"><button type="button" id="add-product" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">مصنوعات کی فہرست</button></a>
         <br><br><br>
         <div class="content-panel table-responsive">
             <h1 class="text-center">{{ product.name|title }} <small>{{ product.brand_name|title }}</small> | زخیرہ گیا</h1><br>
@@ -18,19 +19,21 @@
                     <th class="text-center">فروخت کی قیمت</th>
                     <th class="text-center">خرید کی قیمت</th>
                     <th class="text-center">مقدار</th> 
+                    <th class="text-center">سیریل نمبر</th>
                 </tr>
                 </thead>
                 <tbody class="product-table-body text-center">
                 {% for stockout in object_list %}
+                    {{ stockout.price_per_item }}
                     <tr>
                         <td>
                             <a href="/product/deletestockout/?id={{stockout.id}}"><button class="confirm-delete btn btn-danger btn-xs" title="Delete"><i class="fa  fa-trash"></i></button></a>
-
                         </td>
-                        <td>{{ stockout.dated}}</td>
+                        <td>{{ stockout.dated }}</td>
                         <td class="#">{{ stockout.selling_price|floatformat:-2 }}</td>
                         <td class="#">{{ stockout.buying_price|floatformat:-2 }}</td>
                         <td>{{ stockout.stock_out_quantity|floatformat:-2 }} </td>
+                        <td>{{ forloop.counter }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
