--- a/templates/ledger/customer_ledger_list.html
+++ b/templates/ledger/customer_ledger_list.html
@@ -3,6 +3,15 @@
 {% block submenu_customer_ledger %}active{% endblock %}
 
 {% block content %}
+
+<style>
+    .new1{
+        margin-left: 240px;
+    }
+    .new2{
+        margin-left: 30px;
+    }
+</style>
 <div class="col-md-12">
     <!-- کھاتا -->
     <br>
@@ -24,6 +33,14 @@
             <div style="float: left; padding: 12px; font-size: 20px">
                 <strong>کل بقیہ رقم: </strong><span style="color: red">{{ total_remaining_amount|floatformat:'-2'}}</span>
             </div>
+            <div class="new1" style="float: left; padding: 12px; font-size: 20px;">
+                <strong>کل ادائیگی: </strong><span style="color: red">{{ sum_total_amount|floatformat:-2}}</span>
+            </div>
+            
+            <div class="new2" style="float: left; padding: 12px; font-size: 20px">
+                <strong>کل کھاتا: </strong><span style="color: red">{{ sum_total_payment|floatformat:-2}}</span>
+            </div>
+            
             <!-- <hr> -->
             <!-- <thead>
                 <tr>
@@ -62,7 +79,7 @@
                     </td>
                     <td>{{ customer_ledger.remaining_ledger|floatformat:-2 }}</td>
 
-                    <td>{{ customer_ledger.payment_amount|floatformat:-2 }}</td>
+                    <td class="sum-of-all">{{ customer_ledger.payment_amount|floatformat:-2 }}</td>
 
                     <td>{{ customer_ledger.ledger_amount|floatformat:-2 }}</td>
 
@@ -108,4 +125,5 @@
 })
 
 </script>
+
 {% endblock %}
