--- a/templates/ledger/customer_ledger_details.html
+++ b/templates/ledger/customer_ledger_details.html
@@ -4,6 +4,16 @@
 
 {% block content %}
     <!-- کھاتا -->
+
+<style>
+    .new1{
+        margin-left: 370px;
+    }
+    .new2{
+        margin-right: 320px;
+    }
+</style>
+    
 <br>
 <a href="{% url 'ledger:customer_ledger_list'%}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">لسٹ کھاتا  </button></a>
 <a href="{% url 'ledger:add_ledger' customer_id=customer.id %}"><button type="button" id="ledger-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">نیا کھاتا شامل کریں۔</button></a>
@@ -19,6 +29,14 @@
                         <div style="float: right; padding: 12px; font-size: 20px">
                             <strong style="float: right">کل بقیہ رقم: <span style="color: red">{{ remaining_amount|floatformat:-2 }}</span></strong>
                         </div>
+                        <div class="new1" style="float: left; padding: 12px; font-size: 20px;">
+                            <strong>کل ادائیگی کی رقم: </strong><span style="color: red">{{ sum_of_payment|floatformat:-2}}</span>
+                        </div>
+                        
+                        <div class="new2" style="float: right; padding: 12px; font-size: 20px">
+                            <strong>کل رقم: </strong><span style="color: red">{{ sum_of_legder|floatformat:-2}}</span>
+                        </div>
+                        
                         <!-- <hr> -->
                         <table class="table table-striped table-advance table-bordered table-hover ledger-table table-responsive">
                             <thead>
