list added ledgers

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                             <div class="col-xs-12 text-center">
                                 <br>
                                 <br>
-                                <div class="panel_txt">بنام / لیجر</div>
+                                <div class="panel_txt">کہاتہ / لیجر</div>
                             </div>
                         </div>
                     </div>
