--- a/templates/ledger/customer_ledger_list.html
+++ b/templates/ledger/customer_ledger_list.html
@@ -57,6 +57,7 @@
                 <tr>
                     <th class="text-center">اعمال</th>
                     <th class="text-center"><i class=" fa fa-bookmark"></i>بقیہ کھاتا</th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i>بنام</th>
                     <th class="text-center"><i class=" fa fa-bookmark"></i>کل ادائیگی</th>
                     <th class="text-center"><i class=" fa fa-edit"></i>کل کھاتا</th>
                     <th class="text-center"><i class=" fa fa-edit"></i>شخص کی قسم</th>
@@ -77,7 +78,13 @@
                         <a href="/ledger/updateLedgers/?id={{customer_ledger.id}}"><button class="btn btn-success btn-xs"><i class="fa fa-edit"></i></button></a>
 
                     </td>
-                    <td>{{ customer_ledger.remaining_ledger|floatformat:-2 }}</td>
+                    {% if customer_ledger.remaining_ledger > -1 %}
+                        <td>{{ customer_ledger.remaining_ledger }}</td>
+                        <td>0</td>
+                    {% else %}
+                        <td>0</td>
+                        <td>{{ customer_ledger.remaining_ledger }}</td>
+                    {% endif %}
 
                     <td class="sum-of-all">{{ customer_ledger.payment_amount|floatformat:-2 }}</td>
 
