--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/style-responsive.css' %}" rel="stylesheet">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{% static 'js/chart-master/Chart.js' %}"></script>
 
     <link href="{% static 'css/profileImage.css' %}" rel="stylesheet" type="text/css"/>
@@ -154,7 +154,7 @@
 <script src="{% static 'js/sparkline-chart.js' %}"></script>
 <script src="{% static 'js/zabuto_calendar.js' %}"></script>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- jQuery  -->
 <script src="{% static 'js/assets/js/jquery.min.js' %}"></script>
 <script src="{% static 'js/assets/js/bootstrap.bundle.min.js' %}"></script>
