--- a/templates/ledger/customer_ledger_list.html
+++ b/templates/ledger/customer_ledger_list.html
@@ -36,7 +36,9 @@
             <div class="new1" style="float: left; padding: 12px; font-size: 20px;">
                 <strong>کل کھاتا: </strong><span style="color: red">{{ sum_total_payment|floatformat:-2}}</span>
             </div>
-             
+            <div class="new1" style="float: left; padding: 12px; font-size: 20px;">
+                <strong>کل بنام: </strong><span id="benam-total" style="color: red">0</span>
+            </div>
             <div class="new2" style="float: left; padding: 12px; font-size: 20px">
                 <strong>کل ادائیگی: </strong><span style="color: red">{{ sum_total_amount|floatformat:-2}}</span>
             </div>
@@ -66,7 +68,7 @@
                     <th class="text-center"><i class="fa fa-bullhorn"></i>سیریل نمبر</th>
                 </tr>
             </thead>
-            <tbody class="ledger-table-body text-center">
+            <tbody class="ledger-table-body text-center " id="ItemsTable">
                 {% if customer_ledgers %}
                 {% for customer_ledger in customer_ledgers %}
                 <tr>
@@ -129,8 +131,34 @@
     });
     $(document).on('click', '.confirm-delete', function(){
     return confirm('Are you sure you want to delete this?');
+
 })
 
+
+var arr = 0;
+$("#ItemsTable tr").each(function(){
+    arr-=parseInt(($(this).find("td:nth-child(3)").text())); //put elements into array
+    
+});
+document.getElementById("benam-total").innerHTML = arr;
+// console.log(arr);
+// $('table > tbody > tr').each(function() {
+//     var total=0;
+//   $(this).children('td').each(function(){
+//     var $row = $(this).parents('tr');
+//     var text = $row.find('td:nth-child(3)').text();
+//     // console.log(text);
+//     if (text < 0 ) {
+//       total += parseFloat(text);
+//       console.log(text);
+//     }
+    
+    
+//   })
+
+//   document.getElementById("benam-total").innerHTML = total;
+
+// });
 </script>
 
 {% endblock %}
